<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_learn"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_learn" />
    <item
        android:id="@+id/nav_scan"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/nav_scan" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
